added visualization of recommendation data

--- a/fo_services/templates/_base.html
+++ b/fo_services/templates/_base.html
@@ -3,23 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='main.css') }}">
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body class="bg-slate-800 text-slate-50 font-mono max-w-[1000px] mx-auto">
 <div class="px-4 py-4 mx-auto">
     <nav class="flex flex-row justify-between items-center pb-2 mb-4 border-b border-dashed border-amber-400">
-        <h1 class="text-2xl">
-            <a href="{{ url_for('index') }}">Fluid Ontology Services</a>
-        </h1>
-        <ul>
-            {% if g.user %}
-                <li><span>{{ g.user['name'] }}</span></li>
-                <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
-            {% else %}
-                <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
-            {% endif %}
-        </ul>
+        <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto space-x-6 p-4">
+            <a href="{{ url_for('index') }}" class="flex items-center space-x-3 rtl:space-x-reverse">
+                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Fluid Ontology Services</span>
+            </a>
+            
+            <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+                <span class="sr-only">Open main menu</span>
+                <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+                </svg>
+            </button>
+            <div class="hidden w-full md:block md:w-auto">
+              <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+                {% if g.user %}
+                    <li><span>Welcome, {{ g.user['name'] }}:</span></li>
+                    <li><a href="{{ url_for('clustervis.inspect') }}" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Inspect Clusters</a></li>
+                    <li><a href="{{ url_for('auth.logout') }}" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Log Out</a></li>
+                {% else %}
+                    <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
+                {% endif %}
+              </ul>
+            </div>
+        </div>
     </nav>
     <section>
         <header>
@@ -39,3 +52,9 @@
 </div>
 </body>
 </html>
+
+
+
+
+
+
