--- a/src/fo_services/assets/main.scss
+++ b/src/fo_services/assets/main.scss
@@ -4,21 +4,38 @@
 
 @import "fonts";
 
-input[type="text"], input[type="password"] {
-  @apply bg-slate-100 rounded-sm text-slate-700;
-}
-
-.btn-primary {
-  @apply bg-emerald-300 text-emerald-900 text-lg font-bold rounded-sm py-1 ;
-}
-
-.flash {
-  @apply border border-dashed rounded px-8 py-4;
-  &.flash-error {
-    @apply bg-orange-500 font-bold text-slate-600;
+@layer base {
+  h1 {
+    @apply text-2xl font-semibold whitespace-nowrap dark:text-white;
   }
-  &.flash-success {
-    @apply bg-emerald-500 font-bold;
+  h2 {
+    @apply text-xl font-semibold whitespace-nowrap dark:text-white mb-4;
+  }
+  h3 {
+    @apply text-lg font-bold whitespace-nowrap dark:text-white mb-3;
+  }
+  h4 {
+    @apply text-lg whitespace-nowrap dark:text-white mb-2;
+  }
 
+  input[type="text"],
+  input[type="password"] {
+    @apply bg-slate-100 rounded-sm text-slate-700;
+  }
+}
+
+@layer components {
+  .btn-primary {
+    @apply bg-emerald-400 text-emerald-800 font-bold rounded-sm py-1 px-4 hover:bg-emerald-300 hover:text-emerald-900;
+  }
+
+  .flash {
+    @apply border border-dashed rounded px-8 py-4;
+    &.flash-error {
+      @apply bg-orange-500 font-bold text-slate-600;
+    }
+    &.flash-success {
+      @apply bg-emerald-500 font-bold;
+    }
   }
 }
